Improve error message for "Conflicting lifecycle mapping metadata"
This closes #529

--- a/org.eclipse.m2e.core/src/org/eclipse/m2e/core/internal/messages.properties
+++ b/org.eclipse.m2e.core/src/org/eclipse/m2e/core/internal/messages.properties
@@ -25,11 +25,11 @@ EclipseLogger_name=m2e console logger
 IndexUpdaterJob_title=Updating indexes
 LifecycleConfigurationPluginExecutionNotCovered=Plugin execution not covered by lifecycle configuration: {0}
 LifecycleConfigurationPluginExecutionErrorMessage=Plugin execution marked as error in lifecycle configuration: {0}
-LifecycleDuplicate=Conflicting lifecycle mapping metadata (project packaging type="{0}"). To enable full functionality, remove the conflicting mapping and run Maven->Update Project Configuration.
+LifecycleDuplicate=Conflicting lifecycle mapping metadata (project packaging type="{0}"): {1}. To enable full functionality, remove the conflicting mapping and run Maven->Update Project Configuration.
 LifecycleMappingNotAvailable=Lifecycle mapping "{0}" is not available. To enable full functionality, install the lifecycle mapping and run Maven->Update Project Configuration.
 LifecycleMappingPackagingMismatch=Packaging type {0} configured in embedded lifecycle mapping configuration does not match the packaging type {1} of the current project.
 LifecycleMappingPluginVersionIncompatible=Incompatible lifecycle mapping plugin version {0}
-PluginExecutionMappingDuplicate=Conflicting lifecycle mapping (plugin execution "{0}"). To enable full functionality, remove the conflicting mapping and run Maven->Update Project Configuration.
+PluginExecutionMappingDuplicate=Conflicting lifecycle mapping (plugin execution "{0}"): {1}. To enable full functionality, remove the conflicting mapping and run Maven->Update Project Configuration.
 PluginExecutionMappingInvalid=Invalid plugin execution mapping (plugin execution "{0}"). To enable full functionality, correct the invalid mapping and run Maven->Update Project Configuration.
 ProjectConfiguratorNotAvailable=Project configurator "{0}" required by plugin execution "{1}" is not available. To enable full functionality, install the project configurator and run Maven->Update Project Configuration.
 ProjectConfiguratorToRunBeforeNotAvailable={0} is missing required configurator "{1}" to run before. To enable full functionality, install the project configurator and run Maven->Update Project Configuration.
